--- a/src/stylesheets/partials/request.styl
+++ b/src/stylesheets/partials/request.styl
@@ -1,8 +1,34 @@
+@keyframes form-done
+  0%
+    height: 250px
+  100%
+    height: 30px
+
+@keyframes disapire
+  0%
+    opacity: 1
+  100%
+    opacity: 0
+
 .request
   position relative
   padding: 60px 90px
   text-align: center
   border: 1px solid #ffffff
+  overflow: hidden
+  margin: auto
+  height: 250px
+
+  &-wrap
+    opacity: 1
+
+  &.done
+    animation: form-done .5s linear
+    height: 30px
+    & .request-wrap
+      animation: disapire .5s linear
+      opacity: 0
+
   +media-tablet-landscape-up()
     padding: 60px
   +media-phone-up()
@@ -15,6 +41,17 @@
     align-items: stretch
     +media-tablet-up()
       flex-direction: column
+
+  .loading-icon
+    display: inline-block
+    color: #0000
+    margin: -12px 10px
+    width: 40px
+    height 40px
+    border-radius: 40px
+    border-top: solid 3px white
+    border-right: solid 3px #fff0
+    animation: loading-icon .6s linear infinite
 
   &-icon
     position: absolute
@@ -42,6 +79,12 @@
     &:hover
       background: darken(#c48233, 20%)
 
+    @keyframes loading-icon
+      0%
+        transform: rotate(0deg)
+      100%
+        transform: rotate(360deg)
+
   &-input
     padding: 0 10px
     margin-bottom: 10px
@@ -59,6 +102,11 @@
 
     +media-tablet-up()
       width: 100%
+
+  -in
+
+  & .invalid
+    border-bottom: solid 2px red
 
   .form-container
     display: flex
@@ -112,7 +160,7 @@
   position: absolute
   top: 50%
   left: 45%
-  margin-top: -20%
+  margin: auto
 
 .preloader.active
   display: block
