--- a/src/stylesheets/fonts.styl
+++ b/src/stylesheets/fonts.styl
@@ -1,9 +1,5 @@
-@font-face {
-  font-family: 'Lab Grotesque Light';
-  src: url('LabGrotesque-Light.eot');
-  src: url('LabGrotesque-Light.eot?#iefix') format('embedded-opentype'),
-    url('LabGrotesque-Light.woff') format('woff'),
-    url('LabGrotesque-Light.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
+@import "../fonts/LabGrotesque-Regular/style.css";
+@import "../fonts/LabGrotesque-Light/style.css";
+@import "../fonts/LabGrotesque-Bold/style.css";
+@import "../fonts/LabGrotesque-Medium/style.css";
+@import "../fonts/LabGrotesque-Thin/style.css";
