--- a/src/stylesheets/main.styl
+++ b/src/stylesheets/main.styl
@@ -1,6 +1,7 @@
 @import "~normalize.css";
 @import './mixins.styl';
 @import './slick.styl';
+@import './fonts.styl';
 @import './partials/intro.styl';
 @import './partials/layout.styl';
 @import './partials/mobile-menu.styl';
