--- a/src/stylesheets/partials/intro.styl
+++ b/src/stylesheets/partials/intro.styl
@@ -12,13 +12,14 @@
 
   .man
     position:absolute
-    bottom: 90px
-    right: 70px
+    bottom: 55px
+    right: 20px
     z-index: 2
     transform: translateY(100%)
 
     +media-desktop-up()
       width: 400px
+      bottom: 40px
       top: -70px
       right: 20px
     +media-tablet-landscape-up()
@@ -70,7 +71,7 @@
     text-transform: uppercase
 
 .intro-bottom
-  height: 190px
+  // height: 190px
   position: absolute
   bottom: 0
   left: 0
