--- a/src/stylesheets/partials/steps.styl
+++ b/src/stylesheets/partials/steps.styl
@@ -4,7 +4,7 @@
   justify-content: space-between
   flex-wrap: wrap
   +media-desktop-up()
-    justify-content: space-around
+    justify-content: space-evenly
 
 .step
   width: 200px
