--- a/src/stylesheets/partials/facts.styl
+++ b/src/stylesheets/partials/facts.styl
@@ -1,6 +1,6 @@
 .facts
   background-color: #FFF
-  min-height: 1000px
+  min-height: 500px
   +media-tablet-up()
     min-height: auto
 
@@ -11,18 +11,15 @@
     display: flex
     flex-direction: row
     align-items: flex-start
-    justify-content: space-between
+    justify-content: space-evenly
     flex-wrap: wrap
-    +media-tablet-landscape-up()
-      justify-content: space-around
 
 .fact
   display: flex
   flex-direction: column
   align-items: center
-  +media-tablet-landscape-up()
-    margin-right: 30px
-    margin-bottom: 30px
+  width: 180px
+  margin-bottom: 30px
 
   &-value
     color: #0060FF
