--- a/src/stylesheets/partials/feedback.styl
+++ b/src/stylesheets/partials/feedback.styl
@@ -1,21 +1,32 @@
 .feedback
   position: relative
-  min-height: 1000px
+  min-height: 800px
   background-color: #ffffff
 
   .heading-title
     color: #000000
 
+.feedback
   &-list
-    width: 100%
     display: flex
     flex-direction: row
     justify-content: space-between
-    flex-wrap: wrap
+    overflow-x: auto
+    min-width: 100%
+    -ms-overflow-x-style: none;
+    &::-webkit-scrollbar
+      display: none
+
 
   &-item
-    width: 23%
-
+    width: 300px
+    min-width: 300px
+    margin: 0 20px
+    display inline-block
+    
+    +media-desktop-up()
+      width: 28%
+    
     +media-tablet-up()
       width: 49%
       margin-bottom: 20px
