--- a/src/stylesheets/partials/layout.styl
+++ b/src/stylesheets/partials/layout.styl
@@ -1,5 +1,5 @@
 .container
-  width: 1060px
+  max-width: 1060px
   margin: 0 auto
 
   +media-desktop-up()
@@ -87,6 +87,17 @@
 .footer
   margin: 50px 0
 
+  &-container
+    width: 33.33%
+    text-align: center
+    justify-content: center
+
+    +media-desktop-up()
+      width: 50%
+
+    +media-tablet-up()
+      width: 100%
+
   &-wrap
     display: flex
     flex-direction: row
@@ -104,6 +115,9 @@
     display: block
     text-align: center
     font-size: 20px
+
+  .social-list
+    justify-content: center
 
   &-link
     color: #c48233
