--- a/src/stylesheets/partials/request.styl
+++ b/src/stylesheets/partials/request.styl
@@ -1,8 +1,8 @@
 @keyframes form-done
   0%
-    height: 250px
+    height: 270px
   100%
-    height: 60px
+    height: 100px
 
 @keyframes disapire
   0%
@@ -17,14 +17,13 @@
   border: 1px solid #ffffff
   overflow: hidden
   margin: auto
-  height: 250px
 
   &-wrap
     opacity: 1
 
   &.done
     animation: form-done .7s ease-out
-    height: 60px
+    height: 100px
     & .request-wrap
       animation: disapire .5s linear
       opacity: 0
@@ -87,7 +86,7 @@
 
   &-input
     padding: 0 10px
-    margin-bottom: 10px
+    margin-bottom: 20px
     width: 260px
     height: 40px
     line-height: 40px
@@ -101,69 +100,20 @@
     box-sizing border-box
 
     +media-tablet-up()
-      width: 100%
+      width: 340px
 
-  -in
-
-  & .invalid
-    border-bottom: solid 2px red
+  &-format
+    option
+      color: black
 
   .form-container
     display: flex
     flex-direction: row
-    justify-content: space-around
+    justify-content: space-evenly
     flex-wrap: wrap
 
   .request-action
     margin-top: 40px
-
-
-//onclick stylesheet
-
-.form-result 
-  background-color: #1c1c1c
-  padding-top: 110px
-  text-align: center
-  font-size: 18px
-  color: #c48233
-  box-shadow: 1px 2px 5px #ebebeb
-  position: absolute
-  width: 85%
-  height: 28%
-  border-radius: 5px;
-  opacity: 0
-
-
-.form-result.active 
-  top: 15%;
-  opacity: 1;
-
-.form-error
-  background-color: #1c1c1c
-  padding-top: 110px
-  text-align: center
-  font-size: 18px
-  color: #c48233
-  box-shadow: 1px 2px 5px #ebebeb
-  position: absolute
-  width: 85%
-  height: 28%
-  border-radius: 5px;
-  opacity: 0
-
-.form-error.active
-  top: 15%;
-  opacity: 1;
-
-.preloader 
-  display: none
-  position: absolute
-  top: 50%
-  left: 45%
-  margin: auto
-
-.preloader.active
-  display: block
 
 .error
   display: block
