--- a/src/stylesheets/partials/screen.styl
+++ b/src/stylesheets/partials/screen.styl
@@ -3,14 +3,16 @@
   box-sizing: border-box
 
   &-title
-    padding: 65px 0
+    padding: 0
+    padding-top: 65px
+    padding-bottom: 30px
     display: flex
     flex-direction: column
     align-items: center
     text-align: center
 
   &-icon
-    margin-bottom: 10px
+    // margin-bottom: 10px
 
   &-content
     padding-bottom: 65px
