--- a/src/stylesheets/partials/types.styl
+++ b/src/stylesheets/partials/types.styl
@@ -44,12 +44,13 @@
     bottom: 0
     width: 100%
 
-  &-button
+  &-button 
     width: 100%
     height: 74px
     line-height 74px
+    background-image: linear-gradient(to right top, #eb413a, #f14c32, #f75728, #fb631b, #fe6f04)
     color: #ffffff
     font-size: 16px
     text-transform: uppercase
     text-decoration: underline
-    background-image: linear-gradient(to right top, #eb413a, #f14c32, #f75728, #fb631b, #fe6f04)
+    text-align: center
