Update scripts. Fix lint issues. Improvements to webpack configuration.

--- a/src/stylesheets/partials/general.styl
+++ b/src/stylesheets/partials/general.styl
@@ -34,18 +34,18 @@ h2
   font-size: 40px
 
 h1, h2, h3, h4, h5, h6, p {
-	font-weight: normal;
+	font-weight: normal
 	font-family: 'Lab Grotesque', sans-serif
 }
 
 body
   font-family: 'Lab Grotesque', sans-serif
-  display: flex;
-  flex-direction: column;
+  display: flex
+  flex-direction: column
   font-size: 14px
   line-height: 1.4
   color: #010101
-  min-width: 400px
+  min-width: 320px
 
 .i-bold
   font-weight: bold
