Update scripts. Add count up. Optimize images. Add video BG on the main screen.

--- a/src/stylesheets/partials/icon.styl
+++ b/src/stylesheets/partials/icon.styl
@@ -61,24 +61,31 @@
     background-size: contain
 
 .icon-vk,
-.icon-tw,
+.icon-tg,
 .icon-inst,
 .icon-fb
   display: block
   width: 22px
   height: 22px
   border-radius 50px
+  background-size: contain
+  background-position: center
+  background-repeat: no-repeat
 
 .icon-vk
-  background: url("../images/vk-icon.png")
+  background-image: url("../images/vk-icon.png")
 
 .icon-tw
-  background: url("../images/tw-icon.png")
+  background-image: url("../images/tw-icon.png")
+
+.icon-tg
+  background-image: url("../images/ico-tg.svg")
+  background-size: 24px;
 
 .icon-inst
-  background: url("../images/instg-icon.png")
+  background-image: url("../images/instg-icon.png")
 
 .icon-fb
-  background: url("../images/fb-icon.png")
+  background-image: url("../images/fb-icon.png")
 
 
