add gallery images, add clients/partners sections, add feedbacks

--- a/src/stylesheets/main.styl
+++ b/src/stylesheets/main.styl
@@ -8,6 +8,7 @@
 @import './partials/navigation.styl';
 @import './partials/emotions.styl';
 @import './partials/gallery.styl';
+@import './partials/clients.styl';
 @import './partials/general.styl';
 @import './partials/hamburger.styl';
 @import './partials/facts.styl';
@@ -21,4 +22,5 @@
 @import './partials/steps.styl';
 @import './partials/types.styl';
 @import './partials/feedback.styl';
+@import './partials/partners.styl';
 @import './partials/request.styl';
