--- a/src/stylesheets/partials/icon.styl
+++ b/src/stylesheets/partials/icon.styl
@@ -44,6 +44,22 @@
     background-position: center
     background-size: contain
 
+  &.is-clients
+    width: 73px
+    height: 73px
+    background-image: url('../images/clients-icon.png')
+    background-repeat: no-repeat
+    background-position: center
+    background-size: contain
+
+  &.is-partners
+    width: 73px
+    height: 73px
+    background-image: url('../images/partners-icon.png')
+    background-repeat: no-repeat
+    background-position: center
+    background-size: contain
+  
   &.is-feedback
     width: 73px
     height: 73px
