--- a/src/stylesheets/partials/feedback.styl
+++ b/src/stylesheets/partials/feedback.styl
@@ -35,8 +35,14 @@
       width: 100%
 
   &-image
+    display: flex
+    justify-content: center
+    max-height: 200px
     width: 100%
     margin-bottom: 40px
+    img
+      margin: auto 0
+      max-height: 200px
 
   &-info
 
